kube/engine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-engine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-engine
  template:
    metadata:
      labels:
        app: go-engine
    spec:
      containers:
      - name: go-engine
        image: siddjuugi/probo_go_engine:latest
---
apiVersion: v1
kind: Service
metadata:
  name: go-engine
spec:
  selector:
    app: go-engine
  type: ClusterIP
  ports:
  - port: 8005
    targetPort: 8081
