kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-apps-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: probo.sidd.live
    http:
      paths:
      - path: /server
        pathType: Prefix
        backend:
          service:
            name: server-service
            port:
              number: 3000
      - path: /socket
        pathType: Prefix
        backend:
          service:
            name: ws-service
            port:
              number: 8080
